# zkf

./: .gitignore  AGENTS.md  README.md  float.core  noxfile.py  pyproject.toml  pytest.ini  zkf_transcendental.py  zkf_trig.py
.claude/skills/comment-cleanup/: SKILL.md
.claude/skills/review-loop/: SKILL.md
.github/workflows/: ci.yml  diag.yml  release.yml
hdl/: _zkf_horner.v  _zkf_normshift.v  _zkf_pmul.v  _zkf_rshift_sticky.v  zkf_cmp.v  zkf_cmp_comb.v  zkf_div.v  zkf_exp2.v  zkf_fma.v  zkf_from_int.v  zkf_log2.v  zkf_mul.v  zkf_mul_ilog2_const.v  zkf_neg.v  zkf_pipe.v  zkf_saturate.v
hdl/_tables/: _zkf_cordic_m24.v  _zkf_exp2_m24.v  _zkf_exp2_m27.v  _zkf_exp2_m48.v  _zkf_exp2_m53.v  _zkf_log2_m27.v  _zkf_log2_m32.v  _zkf_log2_m36.v
model/zkf/: README.md  __init__.py  _core.py  oracle.py
model/zkf/_tables/: trans.py
proof/: README.md  report.py  run_proofs.py
proof/harness/: zkf_abs_eq.v  zkf_add_eq.v  zkf_cmp_eq.v  zkf_div_eq.v  zkf_div_radix4_step_eq.v  zkf_is_finite_eq.v  zkf_mul_eq.v  zkf_neg_eq.v  zkf_pack_eq.v  zkf_pipe_eq.v  zkf_saturate_eq.v  zkf_sort_eq.v
proof/refs/: zkf_add_ref.v  zkf_cmp_ref.v  zkf_div_radix4_step_ref.v  zkf_div_ref.v  zkf_mul_ref.v  zkf_pack_ref.v
proof/sby/: zkf_abs.sby  zkf_add.sby  zkf_cmp.sby  zkf_div.sby  zkf_div_radix4_step.sby  zkf_is_finite.sby  zkf_mul.sby  zkf_mul_so1.sby  zkf_neg.sby  zkf_pack.sby  zkf_pack_so1.sby  zkf_pipe.sby  zkf_saturate.sby  zkf_sort.sby
synth/: common.py  diamond_ecp5.py  modules.py  wrappers.py  yosys.py  yosys_ecp5.py  yosys_spartan.py
tb/: _atan2_nearaxis_sweep.py  _exp2_boundary_sweep.py  _exp2_exhaustive_small.py  _zkf_pmul_tb.v  test_abs.py  test_add.py  test_addsub.py  test_atan2.py  test_cmp.py  test_div.py  test_exp2.py  test_float_matrix.py  test_fma.py  test_from_int.py  test_is_finite.py  test_log2.py  test_mul.py  test_mul_ilog2.py  test_mul_ilog2_const.py  test_neg.py  test_normshift.py  test_pack.py  test_pipe.py  test_properties.py  test_resize.py  test_round.py  test_rshift.py  test_saturate.py  test_sincos.py  test_sort.py  test_to_int.py  test_zkf_model_layout.py  zkf_bits.py  zkf_coverage.py  zkf_latency.py  zkf_matrix.py  zkf_mul_ilog2_const_wrap.v  zkf_operands.py  zkf_params.py  zkf_pmul_check.py  (+3 more)
tools/: zkf_transcendental.py  zkf_trig.py
zkf/: __init__.py  __main__.py  _core.py  _format.py  _operators.py  _reference.py  _rtl.py  _value.py  oracle.py
zkf/_tables/: __init__.py  trans.py  trig.py
zkf/rtl/: _zkf_cordic.v  _zkf_div_core.v  _zkf_fixed_to_float.v  _zkf_horner.v  _zkf_pack.v  _zkf_to_fixpoint.v  zkf_abs.v  zkf_add.v  zkf_addsub.v  zkf_atan2.v  zkf_exp2.v  zkf_from_int.v  zkf_is_finite.v  zkf_mul_ilog2.v  zkf_resize.v  zkf_round.v  zkf_sincos.v  zkf_sort.v  zkf_to_int.v
zkf/rtl/_tables/: _zkf_cordic_m16.v  _zkf_cordic_m18.v  _zkf_cordic_m27.v  _zkf_cordic_m32.v  _zkf_cordic_m36.v  _zkf_cordic_m48.v  _zkf_cordic_m53.v  _zkf_exp2_m16.v  _zkf_exp2_m18.v  _zkf_exp2_m24.v  _zkf_exp2_m27.v  _zkf_exp2_m32.v  _zkf_exp2_m36.v  _zkf_exp2_m48.v  _zkf_exp2_m53.v  _zkf_log2_m16.v  _zkf_log2_m18.v  _zkf_log2_m24.v  _zkf_log2_m48.v  _zkf_log2_m53.v
