[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zkf"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Efficient floating-point engine RTL for controls & embedded following IEEE 754 sans NaN and subnormals"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Zubax Robotics", email = "pavel.kirienko@zubax.com" }]
keywords = ["fpga", "hdl", "verilog", "floating point", "rtl", "dsp", "hardware design"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]

[project.optional-dependencies]
oracle = ["numpy~=2.4", "mpmath~=1.4"]
test = [
    "zkf[oracle]",
    "cocotb~=2.0",
    "pytest>=8",
    "pytest-xdist>=3", # parallel workers for the verification matrix (-n auto)
]

[project.urls]
Repository = "https://github.com/Zubax/zkf"

[tool.setuptools.dynamic]
version = { attr = "zkf.__version__" }

# namespaces=false keeps zkf/rtl (no __init__.py) as data, not a PEP 420 namespace package.
[tool.setuptools.packages.find]
where = ["."]
include = ["zkf", "zkf.*"]
namespaces = false

[tool.setuptools.package-data]
zkf = ["rtl/**/*.v", "py.typed"]

[tool.pytest.ini_options]
# Only the float matrix orchestrator is collected here; the cocotb test_*.py modules run inside a simulator,
# not under pytest, and the model-layout / pmul checks run as standalone scripts from the nox sessions.
testpaths = ["tb"]
python_files = ["test_float_matrix.py"]
# Deselect the deep/properties/fast tiers by default so a bare run (and `nox -s tests`) exercises only the
# per-PR set; the nox sessions override -m to select the heavier tiers explicitly.
addopts = ["-v", "-m", "not deep and not properties and not fast", "-p", "no:mypy"]
markers = [
    "pr: per-PR verification tier (the default selection)",
    "deep: full parameter-equivalence sweep (correctness on icarus, coverage on verilator); skipped unless -m deep",
    "properties: algebraic-property tests on add/addsub/mul; skipped unless -m properties",
    "fast: smallest-config smoke tier; skipped unless -m fast",
    "icarus: Icarus Verilog correctness run",
    "verilator: Verilator coverage-collecting run",
]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = "zkf/_tables/.+\\.py"
